--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>commands-pom</artifactId>
     <groupId>com.peergreen.shelbie</groupId>
@@ -12,7 +10,7 @@
 
   <artifactId>security-commands</artifactId>
   <packaging>bundle</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>Peergreen Security Commands</name>
 
@@ -20,6 +18,7 @@
     <connection>scm:git:https://forge.peergreen.com/git/git/shelbie/security-commands.git</connection>
     <developerConnection>scm:git:https://forge.peergreen.com/git/git/shelbie/security-commands.git</developerConnection>
     <url>https://forge.peergreen.com/git/summary/?r=shelbie/security-commands.git</url>
+    <tag>SECURITY_COMMANDS_1_0_0</tag>
   </scm>
 
   <dependencies>
