--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <artifactId>security-commands</artifactId>
   <packaging>bundle</packaging>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <name>Peergreen Security Commands</name>
 
@@ -18,7 +18,7 @@
     <connection>scm:git:https://forge.peergreen.com/git/git/shelbie/security-commands.git</connection>
     <developerConnection>scm:git:https://forge.peergreen.com/git/git/shelbie/security-commands.git</developerConnection>
     <url>https://forge.peergreen.com/git/summary/?r=shelbie/security-commands.git</url>
-    <tag>SECURITY_COMMANDS_1_0_0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
